# lib/db/src/schema/index.ts
@@ -2,3 +2,4 @@ export * from "./specs";
 export * from "./conversations";
 export * from "./messages";
 export * from "./auth";
+export * from "./notifications";
